doc/2.8/_sources/reference/generated/ak.concatenate.rst.txt
ak.concatenate
--------------

.. py:module: ak.concatenate

Defined in `awkward.operations.ak_concatenate <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_concatenate.py>`__ on `line 36 <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_concatenate.py#L36>`__.

.. py:function:: ak.concatenate(arrays, axis=0, *, mergebool=True, highlevel=True, behavior=None, attrs=None)


    :param arrays: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param axis: The dimension at which this operation is applied. The
             outermost dimension is ``0``, followed by ``1``, etc., and negative
             values count backward from the innermost: ``-1`` is the innermost
             dimension, ``-2`` is the next level up, etc.
             If a str, it is interpreted as the name of the axis which maps
             to an int if named axes are present. Named axes are attached
             to an array using :py:obj:`ak.with_named_axis` and removed with
             :py:obj:`ak.without_named_axis`; also see the
             `Named axes user guide <../../user-guide/how-to-array-properties-named-axis.html>`__.
    :type axis: int or str
    :param mergebool: If True, boolean and numeric data can be combined
                  into the same buffer, losing information about False vs ``0`` and
                  True vs ``1``; otherwise, they are kept in separate buffers with
                  distinct types (using an :py:obj:`ak.contents.UnionArray`).
    :type mergebool: bool
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict
    :param attrs: Custom attributes for the output array, if
              high-level.
    :type attrs: None or dict

Returns an array with ``arrays`` concatenated. For ``axis=0``, this means that
one whole array follows another. For ``axis=1``, it means that the ``arrays``
must have the same lengths and nested lists are each concatenated,
element for element, and similarly for deeper levels.

